# BlinkGesture

./: CMakeLists.txt  LICENSE  README.md  confusionmatrix.py  export_cnn_to_onnx.py  eye_cnn_int8.onnx  main.cpp  main.py  modelRun.py  quantize_to_int8.py  requirements.txt  run_app.sh  train_eye_cnn.py
include/: blink_detector.hpp  command_dispatcher.hpp  eyestrip.hpp  gui.hpp
src/: blink_detector.cpp  command_dispatcher.cpp  eyestrip.cpp  gui.cpp
